# bookstore

./: pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/reviews/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/reviews/migrations/: 0001_initial.py
