[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "create a bookstore webapp allow users to search and buy books"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
django-toolbelt = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
